wispr sh scripts for ubuntu

--- a/requirements_wispr.txt
+++ b/requirements_wispr.txt
@@ -7,11 +7,11 @@ keyboard==0.13.5
 numpy==2.0.0
 PyAudio==0.2.14
 pycparser==2.22
-pynput==1.7.7
+pynput==1.7.6
 python-xlib==0.33
 requests==2.32.3
 six==1.17.0
-sounddevice==0.5.1
+sounddevice
 soundfile==0.12.1
 urllib3==2.2.3
 
